Resolve conflict on CSS word-break, word-wrap properties from SqSp; add popup behaviour to all optional layers; feedback from DB -missing map div, comment notation

--- a/app/css/this.css
+++ b/app/css/this.css
@@ -15,10 +15,14 @@ html, body {
 
 .svg-icon {
 	background-color: aqua;
-	// override element.style height
+	 /* override element.style height, word wrap*/
 	height: 12px !important;
+    word-break: normal;
+	word-wrap: normal;
 	opacity: 0.3;
 }
+
+
 
 .svg-icon:hover {
   color: #FF00FF;
